# BnsDatafilePlugin_DropscotchSolver

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-single-platform.yml
BnsDatafilePlugin/: BnsDatafilePlugin.cpp  CMakeLists.txt  GlobalState.h  UiPanel.cpp  pluginversion.h.in
